crates/etch-core/tests/snapshots/corpus_tests__core-inline-spoiler.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The answer is "
          },
          {
            "type": "Spoiler",
            "content": [
              {
                "type": "Text",
                "value": "forty-two"
              }
            ]
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
