crates/etch-core/tests/snapshots/corpus_tests__core-inline-strikethrough.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Strikethrough",
            "content": [
              {
                "type": "Text",
                "value": "Struck"
              }
            ]
          },
          {
            "type": "Text",
            "value": " opens this sentence.\nThis sentence has "
          },
          {
            "type": "Strikethrough",
            "content": [
              {
                "type": "Text",
                "value": "struck"
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the middle.\nThis sentence ends with "
          },
          {
            "type": "Strikethrough",
            "content": [
              {
                "type": "Text",
                "value": "struck"
              }
            ]
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
