crates/etch-core/tests/snapshots/corpus_tests__core-inline-strong-emphasis.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Strong",
            "content": [
              {
                "type": "Emphasis",
                "content": [
                  {
                    "type": "Text",
                    "value": "Bold italic"
                  }
                ]
              }
            ]
          },
          {
            "type": "Text",
            "value": " opens this sentence."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence has "
          },
          {
            "type": "Strong",
            "content": [
              {
                "type": "Emphasis",
                "content": [
                  {
                    "type": "Text",
                    "value": "bold italic"
                  }
                ]
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the middle."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence ends with "
          },
          {
            "type": "Strong",
            "content": [
              {
                "type": "Emphasis",
                "content": [
                  {
                    "type": "Text",
                    "value": "bold italic"
                  }
                ]
              }
            ]
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
