crates/etch-core/tests/snapshots/corpus_tests__core-inline-superscript.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Superscript",
            "content": [
              {
                "type": "Text",
                "value": "Start"
              }
            ]
          },
          {
            "type": "Text",
            "value": " opens this sentence."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence includes E = mc"
          },
          {
            "type": "Superscript",
            "content": [
              {
                "type": "Text",
                "value": "2"
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the middle."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This line ends with 1"
          },
          {
            "type": "Superscript",
            "content": [
              {
                "type": "Text",
                "value": "st"
              }
            ]
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
