crates/etch-core/tests/snapshots/corpus_tests__core-links-images-autolink.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Visit "
          },
          {
            "type": "AutoLink",
            "url": "https://example.com/help/getting-started?lang=en#overview"
          },
          {
            "type": "Text",
            "value": " for details."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "Check "
          },
          {
            "type": "AutoLink",
            "url": "http://docs.etch-lang.dev/guide"
          },
          {
            "type": "Text",
            "value": " for the older guide."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "The bare domain example.com should stay plain text."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "The file is at ftp://files.etch-lang.dev/releases/latest.zip and should stay plain text."
          }
        ]
      }
    ]
  },
  "errors": []
}
