crates/etch-core/tests/snapshots/corpus_tests__core-links-images-basic-image.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Image",
            "url": "images/snowy-trail.jpg",
            "alt": "Snowy trail at dawn"
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The travel note includes "
          },
          {
            "type": "Image",
            "url": "icons/campfire.png",
            "alt": "campfire icon"
          },
          {
            "type": "Text",
            "value": " beside the route summary."
          }
        ]
      }
    ]
  },
  "errors": []
}
