crates/etch-core/tests/snapshots/corpus_tests__core-links-images-basic-link.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Read the "
          },
          {
            "type": "Link",
            "url": "https://docs.etch-lang.dev/guide/getting-started",
            "content": [
              {
                "type": "Text",
                "value": "Etch getting started guide"
              }
            ]
          },
          {
            "type": "Text",
            "value": " before writing your first document."
          }
        ]
      }
    ]
  },
  "errors": []
}
