crates/etch-core/tests/snapshots/corpus_tests__core-links-images-image-with-attrs.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Image",
            "url": "photos/author-portrait.jpg",
            "alt": "Author portrait",
            "attrs": {
              "classes": [
                "rounded"
              ],
              "pairs": {
                "width": "80%"
              }
            }
          }
        ]
      }
    ]
  },
  "errors": []
}
