crates/etch-core/tests/snapshots/corpus_tests__core-links-images-image-with-title.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Image",
            "url": "photos/river-overlook.jpg",
            "alt": "River overlook",
            "title": "Morning light over the valley"
          }
        ]
      }
    ]
  },
  "errors": []
}
